--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="libs/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-common-1.2.0.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="libs/jrtf-0.7-02.07.2012.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
