--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/tsengvn/ui/AddAccountView.java=UTF-8
+encoding//src/com/tsengvn/util/CommonUtils.java=UTF-8
